--- a/config.h.in
+++ b/config.h.in
@@ -7,4 +7,5 @@
 #cmakedefine HAVE_FREELOCALE
 #cmakedefine PANCAKE_DEBUG
 #cmakedefine PANCAKE_NETWORK_TLS
+#define PANCAKE_CONFIG_PATH "@PANCAKE_CONFIG_PATH@"
 #define SIZEOF_LONG @SIZEOF_LONG@
